# soldy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/soldy/: __init__.py  cli.py  model.py  path.py
tests/: test_smoke.py
